<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_icono_card_dialog_edit_prestatario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:srcCompat="@drawable/ic_add_24_first_color" />

                <TextView
                    android:id="@+id/tv_titulo_card_dialog_edit_prestatario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_prestatario"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/title_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:weightSum="3">

                <TableRow>

                    <TextView
                        android:id="@+id/tv_nombre_usuario_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/nombre_usuario" />

                    <EditText
                        android:id="@+id/et_nombre_usuario_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:hint="@string/ingrese_el_nombre_de_usuario" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_nombre_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/nombre" />

                    <EditText
                        android:id="@+id/et_nombre_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/ingrese_el_nombre" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_apellido_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/apellido" />

                    <EditText
                        android:id="@+id/et_apellido_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/ingrese_el_apellido" />

                </TableRow>

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_rol_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/rol" />

                    <Spinner
                        android:id="@+id/sp_rol_card_dialog_edit_prestatario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:layout_weight="2" />
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/iv_foto_card_dialog_edit_prestatario"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/img_avatar_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancelar_card_dialog_edit_prestatario"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="@color/transparent_color"
                    android:drawableLeft="@drawable/ic_close_24_success_color"
                    android:text="@string/cancelar"
                    android:textColor="@color/success_color"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/id_btn_editar_card_dialog_edit_prestatario"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/danger_color"
                    android:drawableLeft="@drawable/ic_add_24_white_color"
                    android:text="@string/editar"
                    android:textColor="@color/white_color"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>