<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="panol_gestion.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true">

    </com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/tv_nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:ems="7"
        android:text="@string/nombre_usuario"
        android:textAlignment="textStart"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_animation_view" />

    <EditText
        android:id="@+id/et_nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/ingrese_nombre_usuario"
        android:inputType="text"
        android:textColor="@color/white_color"
        android:textColorHint="@color/gray_dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_usuario" />

    <TextView
        android:id="@+id/tv_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="7"
        android:text="@string/clave"
        android:textAlignment="textStart"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_usuario" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/ingrese_clave"
        android:inputType="textWebPassword"
        android:textColor="@color/white_color"
        android:textColorHint="@color/gray_dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clave" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/first_color"
        android:onClick="login"
        android:text="@string/ingresar"
        android:textColor="@color/white_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_clave"
        app:cornerRadius="25dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>